@@ -7,8 +7,15 @@
  *  http://www.etnus.com/
 \*****************************************************************************/
 
-/*  $Id: debugger.h 11149 2007-03-14 20:53:19Z morrone $
- */
+#if HAVE_CONFIG_H
+#  include "config.h"
+#endif
+
+#if defined HAVE_BG_FILES && !defined HAVE_BG_L_P
+/* Use symbols from the runjob.so library provided by IBM.
+ * Do NOT use debugger symbols local to the srun command */
+
+#else
 
 /* This file contains support for bringing processes up stopped, so that
  * a debugger can attach to them     (done for TotalView)
@@ -28,10 +35,6 @@
 #else
 #define VOLATILE
 #endif
-#endif
-
-#if HAVE_CONFIG_H
-#  include "config.h"
 #endif
 
 #include "src/srun/srun_job.h"
@@ -96,4 +99,5 @@ extern void MPIR_Breakpoint(srun_job_t *job);
  */
 extern char *totalview_jobid;
 
+#endif
 #endif
